- Added stump snail kill option. Will afk until stump snail is killed before continuing
- Decreased the size of area detection for hives. This should hopefully reduce the number of false-positives
- Added discord webhook support

8/1/23
- Fixed bugs regarding whirligig
- Added a GUI


9/1/23
- Added bamboo,blue flower, dandelion and mushroom field pathing
- Added bug runs
- bug fixes

10/1/23
- Added clover,pepper and coconut field pathing
- ctrl c is another, better way to stop the macro
- Edits to the overall flow of the loop so that bug runs wont just loop with the same few mobs
- Decreased looting time for bug runs

11/1/23
 - Forgot to update the image assets, leading to an error. Fixed now
 - Added collection for wealth clock, blueberry dispenser, strawberry dispenser, royal jelly dispenser

13/1/23
- Another bug fix
- Fixed paths for pine tree, pumpkin and cactus

14/1/23
-QOL changes to the GUI 
- Improved walk back to hive path for strawberry
- You can now change the resolution through the GUI instead of the save.txt file
- Option to send screenshots of the game to the user via discord webhook

15/1/23
- Fixed bug regarding squares gathering pattern
- Implemented multi-processing, leading to a Reduction in pause times between gather pattern
- disconnect check
- rejoin convert method
- Added treat dispenser

16/1/23
- If hive aligning fails, the macro attempts it one more time before before assuming that player is facing the right direction. This helps to deal with resetting on spawn
 
18/1/23
- Added discord bot support to allow for user interaction with the macro
- Change to the pixel detection coordinate for backpacks of built-in display
- Walkspeed can now be in decimals 

20/1/23
- Changes to stump field, pineapple field and strawberry dispenser paths
- Changes to GUI so that it overrides default theme and works as expected
- Updated the webhook so that it reads the settings when the macro is started and not when the program is launched